<resources>
    <string name="app_name">Service Locator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="remember_pass">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Log-In</string>
    <string name="dont_have_account">No account?</string>
    <string name="sign_up">Register</string>
    <string name="dont_recieve_code">didn\'t recieve code?</string>
    <string name="resend">Resend</string>
    <string name="nav_header_title">User name</string>
    <string name="nav_header_subtitle">example@email.com</string>
</resources>
