<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="viewmodel"
            type="com.lovisgod.servicelocator.viewmodel.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.Fragments.SignUpFragment"
        android:background="#ECF3F9">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/welcome_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/logo"
            app:layout_constraintTop_toBottomOf="@id/logo"
            android:layout_marginTop="100dp"
            android:text="Welcome"
            android:textStyle="bold">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/welcome_top"
            app:layout_constraintTop_toBottomOf="@id/welcome_top"
            android:text="Please Enter Your Detail">
        </com.google.android.material.textview.MaterialTextView>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintLeft_toLeftOf="@id/logo"
            app:layout_constraintRight_toRightOf="@id/welcome_message"
            app:layout_constraintTop_toBottomOf="@+id/welcome_message">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:hint="@string/enter_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_layout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_password"
                android:inputType="textCapSentences"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/dimen_24"
            android:layout_marginEnd="@dimen/dimen_8"
            android:background="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/sign_up"
            android:textStyle="bold"
            app:cornerRadius="@dimen/fab_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorWhite"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_layout"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="@dimen/dimen_8" />

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Small.FadingCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:layout_marginTop="50dp"
            app:SpinKit_Color="@color/colorPrimary"
            app:layout_constraintRight_toLeftOf="@id/loginBtn"
            android:layout_marginEnd="@dimen/margin"
            app:layout_constraintTop_toBottomOf="@+id/password_layout"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>