<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="viewmodel"
            type="com.lovisgod.servicelocator.viewmodel.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.Fragments.VerifyFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="@dimen/dimen_8"
            android:layout_marginLeft="@dimen/dimen_8"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="serif-monospace"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/verify_message_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginRight="@dimen/dimen_8"
            android:layout_marginLeft="@dimen/dimen_8"
            android:padding="@dimen/dimen_8"
            android:text="Enter Verification Code"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/logo">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/dimen_8"
            android:layout_marginLeft="@dimen/dimen_8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verify_message_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="code"
                android:inputType="phone"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="343dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/dimen_24"
            android:layout_marginEnd="@dimen/dimen_8"
            android:background="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"
            android:text="VERIFY"
            android:textStyle="bold"
            app:cornerRadius="@dimen/dimen_8"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorWhite"
            app:layout_constraintLeft_toLeftOf="@id/phone_layout"
            app:layout_constraintRight_toRightOf="@id/phone_layout"
            app:layout_constraintTop_toBottomOf="@id/no_code"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="@dimen/dimen_8" />


        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Small.FadingCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            app:SpinKit_Color="@color/colorWhite"
            android:elevation="@dimen/dimen_8"
            app:layout_constraintRight_toLeftOf="@id/loginBtn"
            app:layout_constraintTop_toTopOf="@+id/loginBtn"
            app:layout_constraintBottom_toBottomOf="@+id/loginBtn"
            android:layout_marginLeft="@dimen/margin"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/no_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24"
            android:text="@string/dont_recieve_code"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintLeft_toLeftOf="@id/loginBtn"
            app:layout_constraintRight_toLeftOf="@+id/resend"
            android:layout_marginLeft="50dp"
            app:layout_constraintTop_toBottomOf="@+id/phone_layout"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/resend"
            app:layout_constraintBottom_toBottomOf="@id/no_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend"
            android:layout_marginLeft="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintLeft_toRightOf="@id/no_code"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>